# MLOpsPython

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  Pipfile  README.md  Summit.md  demo_flake8.py  evaluation.md  learning.md  pip-install.sh  poetry-install.sh  project.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  step_0_setup.md  step_1_extraction.md  step_2_label.md  step_3_train.md  step_4_share.md  uv-install.sh  workshop.md  workshop_create_library.md
.github/workflows/: ci.yml  docker.yml  docker_with_model.yml  main.yml  python-app.yml  python-ci.yml  sdk-jobs-pipelines-1b_pipeline_with_python_function_components-pipeline_with_python_function_components.yml  train-pipeline.yml
documentation/: Summit.md  learning.md  step_0_setup.md  step_1_extraction.md  step_2_label.md  step_4_share.md  train-pipeline.yml  workshop.md  workshop_cloud_nord.md
documentation/postman/: Cats Dogs Others.postman_collection.json
production/: docker-compose.yaml
production/api/: Dockerfile  index.py  main.py  pyproject.toml  requirements.txt
production/api/core/: base_app_settings.py  log.py  process.py
production/api/core/model/: .gitignore  app_settings.py  inference.py  inference_cv.py  inference_pillow.py  model.py  model_cv.py  model_pillow.py  name.py
production/api/model/: model.py  model_cv.py  model_pillow.py
production/api/tests/: redis_mock.py  test_process.py
production/api/tests/model/: test_model.py
production/base_function/: Dockerfile  index.py  requirements.txt
production/base_function/core/: async_middleware.py  base_app_settings.py  http_service.py  http_service_factory.py  http_singleton.py  i_http_service.py  process.py  redis.py  scrub.py  tracing.py
production/base_function/core/model/: app_settings.py  model.py  model_factory.py  name.py
production/base_function/core/post_processing/: post_processing.py  post_processing_app_settings.py
production/base_function/core/pre_processing/: pre_processing.py  pre_processing_app_settings.py
production/base_function/tests/: test_http_service.py  test_tracing.py
production/inference/: requirements.txt
production/integration/: azureml_run_pipeline.py  pyproject.toml  requirements.txt
production/integration/mlcli/: .amlignore  .gitignore  Dockerfile  command.py  command.yaml  ml-cli.template  mlcli.py  pyproject.toml  requirements.txt
production/integration_tests/: requirements.txt  train_aml.py
production/integration_tests/aml/: Dockerfile  conda_dependencies.yml  config_aml.json  config_env.json  ml-cli.template
production/webapp/: .gitignore  Dockerfile  index.html  package-lock.json  package.json
production/webapp/public/: OidcServiceWorker.js
production/webapp/src/: App.css  App.test.js  index.js  main.css  main.jsx
production/webapp/src/Script/: useScript.js
train/: .gitignore  Pipfile  azureml_post_pipeline.py  azureml_run_download_model.py  azureml_run_dumb_pipeline.py  azureml_run_pipeline.py  azureml_run_test.py  create_labelling_project.py  dataset.py  extraction.py  extraction_dataset.py  pyproject.toml  run_AzureML.sh  run_download_labels.py  run_download_labels.sh  run_download_model.sh  run_pipeline.py  setup_AzureML.sh
train/azure/: run_pipeline.py
train/dumb/: components.py  environment.conda.yaml
train/ecotag/: download_datset.py  ecotag.py  run.py
train/evaluate/: Dockerfile  Pipfile  azureml_step.py  command.py  command.yaml  environment.conda.yaml  evaluate.py  model_pillow.py  pyproject.toml  requirements.txt
train/evaluate/tests/: __init__.py  evaluate_test.py
train/extraction/: .amlignore  .dockerignore  .gitignore  Dockerfile  Pipfile  __init__.py  azureml_step.py  command.py  command.yaml  dataset-cats-dogs-others-label.yml  dataset-cats-dogs-others.yml  directory_hash.py  env.yaml  environment.conda.yaml  extraction.py  init_dataset.sh  movie-trailer-dataset.yml  pyproject.toml  requirements.txt
train/extraction/tests/: __init__.py  extraction_test.py
train/label/: Pipfile  cats_dogs_others_classification-annotations.json  split_data.py
train/label/tests/: label_test.py
train/label/tests/input/labels/: labels.json
train/label_split_data/: .amlignore  .dockerignore  .gitignore  Dockerfile  Pipfile  azureml_step.py  command.py  command.yaml  dataset-cats-dogs-others-labels.yml  env.yaml  environment.conda.yaml  init_dataset.sh  label_split_data.py  movie-trailer-dataset-labels.yml  pyproject.toml  requirements.txt  split_data.py
train/label_split_data/tests/: label_split_data_test.py  test_label_split_data.py
train/label_split_data/tests/input/labels/: labels.json
train/labelling/: .gitignore  dataset-labels.yml  dataset.py  ecotag.py  pyproject.toml  run.py  run.sh  run_create_project.py  run_create_project.sh  run_download_labels.py  run_download_labels.sh
train/output/: .amlignore  .dockerignore  .gitignore  Dockerfile  command.py  command.yaml  pyproject.toml  requirements.txt
train/test/: .amlignore  .dockerignore  .gitignore  Dockerfile  README.md  command.py  command.yaml  evaluate.py  integration.py  pyproject.toml  requirements.txt  test.py
train/test/tests/: conftest.py  evaluate_test.py  test_prepare_integration_data.py
train/train/: .amlignore  .dockerignore  Dockerfile  Pipfile  __init__.py  azureml_step.py  command.py  command.yaml  environment.conda.yaml  explore.ipynb  pyproject.toml  requirements.txt  train.py
train/train/.ipynb_checkpoints/: explore-checkpoint.ipynb
train/train/tests/: test_train.py  train_test.py
webapp/: package-lock.json  package.json
webapp/public/: .gitignore  index.html
webapp/src/: App.js  index.css  index.js  pdf.js
