[project]
name = "mlopspython"
version = "0.0.0"
description = ""
readme = "README.md"
authors = [{ name = "Guillaume Chervet", email = "guillaume.chervet@gmail.com" }]
requires-python = ">=3.8.1,<3.11"
dependencies = []

[dependency-groups]
dev = [
  "black==23.9.1",
  "flake8==6.1.0",
]

[tool.uv]
package = false
constraint-dependencies = [
  "marshmallow<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
  "packages/*",
  "production/api",
  "production/api/packages/*",
  "production/integration",
  "production/integration/mlcli",
  "train/*",
]
