[project]
name = "mlopspython"
version = "0.0.0"
description = ""
readme = "README.md"
authors = [{ name = "Guillaume Chervet", email = "guillaume.chervet@gmail.com" }]
requires-python = ">=3.8.1,<3.11"
dependencies = []

[dependency-groups]
dev = [
  "black==23.9.1",
  "flake8==6.1.0",
  "coverage>=7.3.1,<8"
]



[tool.uv]
package = false
constraint-dependencies = [
  "marshmallow==3.21.3"
]

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv.sources]
mlopspython-extraction = { workspace = true }
mlopspython-inference = { workspace = true }

[tool.uv.workspace]
members = [
  "packages/*",
  "train/*",
  "production/api",
  "production/integration/*",
]
