[project]
name = "pipeline"
version = "0.0.0"
description = ""
authors = [{ name = "Guillaume Chervet", email = "guillaume.chervet@gmail.com" }]
requires-python = ">=3.10,<3.11"
dependencies = [
  "mldesigner==0.1.0b17",
  "azure-ai-ml==1.12.1",
  "ecotag-sdk==0.1.2",
  "azure.identity==1.15.0"
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
