[project]
name = "api"
version = "0.0.0"
description = ""
readme = "README.md"
authors = [{ name = "Guillaume Chervet", email = "guillaume.chervet@gmail.com" }]
requires-python = ">=3.10,<3.11"
dependencies = [
  "pymupdf==1.23.3",
  "keras==2.12.0",
  "tensorflow==2.12.0",
  "fastapi==0.95.0",
  "opencv-contrib-python-headless==4.8.0.76",
  "tensorflow-io-gcs-filesystem==0.27.0",
  "uvicorn==0.23.2",
  "python-multipart==0.0.6",
  "pillow==10.0.1",
  "ml-dtypes==0.4.1",
  "mlopspython-inference",
  "mlopspython-extraction",
]

[tool.uv.sources]
mlopspython-inference = { workspace = true }
mlopspython-extraction = { workspace = true }

[dependency-groups]
dev = ["coverage>=7.3.1,<8"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
