[project]
name = "api"
version = "0.0.0"
description = ""
readme = "README.md"
authors = [{ name = "Guillaume Chervet", email = "guillaume.chervet@gmail.com" }]
requires-python = ">=3.11,<3.12"
dependencies = [
  "pymupdf==1.25.4",
  "tensorflow==2.20.*",
  "keras==3.*",
  "pillow>=10,<11",
  "tensorflow-io-gcs-filesystem; platform_system != 'Windows'",
     "numpy>=1.26,<2",
  "fastapi==0.95.0",
  "opencv-contrib-python-headless==4.8.0.76",
  "uvicorn==0.23.2",
  "python-multipart==0.0.6",
  "ml-dtypes==0.5.3",
  "mlopspython-inference",
  "mlopspython-extraction",
]

[tool.uv.sources]
mlopspython-inference = { path = "../../packages/mlopspython-inference", editable=true}
mlopspython-extraction = { path = "../../packages/mlopspython-extraction", editable=true}

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.uv]
package = false
required-environments = [
  "platform_system == 'Windows' and python_version >= '3.11'",
  "platform_system == 'Linux' and python_version >= '3.11'",
  "platform_system == 'Darwin' and python_version >= '3.11'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
