[tool.poetry]
name = "mlopspython_train_extraction"
version = "0.0.0"
description = ""
authors = ["Guillaume Chervet <guillaume.chervet@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
pymupdf = "1.23.3"
mlopspython-extraction = {path = "packages/extraction", develop = true}
mldesigner = "0.1.0b15"
mlflow = "2.7.1"
azureml-mlflow = "1.53.0"
azure-ai-ml = "1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
