[project]
name = "mlopspython_train_extraction"
version = "0.0.0"
description = ""
readme = "README.md"
authors = [{ name = "Guillaume Chervet", email = "guillaume.chervet@gmail.com" }]
requires-python = ">=3.11,<3.12"
dependencies = [
  "pymupdf==1.25.4",
  "mlopspython-extraction",
  "mldesigner==0.1.0b20",
  "mlflow==2.22.1",
  "azureml-mlflow==1.60.0.post1",
  "azure-ai-ml==1.28.1",
  "ml-dtypes==0.5.3",
]

[tool.uv.sources]
mlopspython-extraction = { path = "../../packages/mlopspython-extraction", editable=true}

[tool.uv]
package = false

[dependency-groups]
dev = ["coverage>=7.3.1,<8"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
