[tool.poetry]
name = "extraction"
version = "0.0.0"
description = ""
authors = ["Guillaume Chervet <guillaume.chervet@gmail.com>"]
readme = "README.md"
packages = [{ include = "*.py" }]

[tool.poetry.dependencies]
python = "~3.10" # ">=3.10,<3.11"
pymupdf = "1.23.3"
mlflow = "2.9.1"
mldesigner = "0.1.0b17"
azure-ai-ml = "1.12.1"
"azure.identity" = "1.15.0"

[tool.poetry.group.dev.dependencies]
coverage = "7.3.1" # ">=7.3.1,<8.0.0

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
