[project]
name = "extraction"
version = "0.0.0"
description = ""
readme = "README.md"
authors = [{ name = "Guillaume Chervet", email = "guillaume.chervet@gmail.com" }]
requires-python = ">=3.10,<3.11"
dependencies = [
  "pymupdf==1.23.3",
  "mlflow==2.9.1",
  "mldesigner==0.1.0b17",
  "azure-ai-ml==1.12.1",
  "azure.identity==1.15.0",
]

[dependency-groups]
dev = ["coverage==7.3.1"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
