[tool.poetry]
name = "test"
version = "0.0.0"
description = ""
authors = ["Guillaume Chervet <guillaume.chervet@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
opencv-contrib-python-headless = "4.8.0.76"
keras = "2.12.0"
tensorflow = "2.12.0"
tensorflow-io-gcs-filesystem = "0.27.0"
pillow = "10.0.1"
mldesigner = "0.1.0b15"
mlflow = "2.7.1"
azureml-mlflow = "1.53.0"
azure-ai-ml = "1.10.1"
mlopspython-inference = {path = "packages/inference"}

[tool.poetry.group.dev.dependencies]
coverage = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
