[project]
name = "train"
version = "0.0.0"
description = ""
readme = "README.md"
authors = [{ name = "Guillaume Chervet", email = "guillaume.chervet@gmail.com" }]
requires-python = ">=3.10,<3.11"
dependencies = [
  "opencv-contrib-python-headless==4.8.0.76",
  "keras==2.12.0",
  "tensorflow==2.12.0",
  "tensorflow-io-gcs-filesystem==0.27.0",
  "pillow==10.0.1",
  "mldesigner==0.1.0b20",
  "mlflow==2.22.1",
  "azureml-mlflow==1.60.0.post1",
  "azure-ai-ml==1.28.1",
  "ml-dtypes==0.5.3",
]

[dependency-groups]
dev = ["coverage>=7.3.1,<8"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
