[project]
name = "train"
version = "0.0.0"
description = ""
readme = "README.md"
authors = [{ name = "Guillaume Chervet", email = "guillaume.chervet@gmail.com" }]
requires-python = ">=3.11,<3.12"
dependencies = [
  "opencv-contrib-python-headless==4.8.0.76",
    "tensorflow==2.20.*",
  "keras==3.*",
  "pillow>=10,<11",
     "numpy>=1.26,<2",
      # Installe seulement hors Windows (utile pour gs:// sur Linux/macOS)
  "tensorflow-io-gcs-filesystem; platform_system != 'Windows'",
  "mldesigner==0.1.0b20",
  "mlflow==2.22.1",
  "azureml-mlflow==1.60.0.post1",
  "azure-ai-ml==1.28.1",
  "ml-dtypes==0.5.3",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[tool.uv]
package = false
required-environments = [
  "platform_system == 'Windows' and python_version >= '3.11'",
  "platform_system == 'Linux' and python_version >= '3.11'",
  "platform_system == 'Darwin' and python_version >= '3.11'",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
