[project]
name = "mlcli"
version = "0.0.0"
description = ""
authors = [{ name = "Guillaume Chervet", email = "guillaume.chervet@gmail.com" }]
requires-python = ">=3.10,<3.11"
dependencies = [
  "mldesigner==0.1.0b17",
  "mlflow==2.9.1",
  "azureml-mlflow==1.53.0",
  "azure-ai-ml==1.12.1",
]

[dependency-groups]
dev = ["coverage>=7.3.1,<8"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
