[project]
name = "mlcli"
version = "0.0.0"
description = ""
authors = [{ name = "Guillaume Chervet", email = "guillaume.chervet@gmail.com" }]
requires-python = ">=3.10,<3.11"
dependencies = [
  "mldesigner==0.1.0b20",
  "mlflow==2.22.1",
  "azureml-mlflow==1.60.0.post1",
  "azure-ai-ml==1.28.1",
]

[dependency-groups]
dev = ["coverage>=7.3.1,<8"]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
